--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#18FFFF"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -43,7 +44,7 @@
         android:layout_marginTop="16dp"
         android:text="0"
         android:textColor="#000000"
-        android:textSize="55dp"
+        android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -71,7 +72,7 @@
         android:gravity="center"
         android:text="TextView"
         android:textColor="#000000"
-        android:textSize="23dp"
+        android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +96,7 @@
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintHorizontal_bias="0.755"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button"
         app:layout_constraintVertical_bias="0.0" />
@@ -105,6 +106,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="@+id/tv_score"
         app:layout_constraintHorizontal_bias="0.446"
@@ -118,6 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
+        android:gravity="center"
         android:hint="write the answer"
         android:inputType="textPersonName"
         android:textSize="20dp"
@@ -131,7 +135,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="TextView"
-        android:textSize="18dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -144,7 +149,7 @@
         android:layout_height="wrap_content"
         android:text="Score : "
         android:textColor="#000000"
-        android:textSize="18dp"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_score"
         app:layout_constraintEnd_toStartOf="@+id/tv_score"
         app:layout_constraintHorizontal_bias="0.805"
